--- a/win/VC120/ScriptDev2.vcxproj.filters
+++ b/win/VC120/ScriptDev2.vcxproj.filters
@@ -1672,10 +1672,13 @@
     <ClCompile Include="..\..\src\scriptdev2\scripts\northrend\ruby_sanctum\instance_ruby_sanctum.cpp">
       <Filter>scripts\northrend\ruby_sanctum</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\scriptdev2\scripts\myscript\pr_hearthstone.cpp">
+    <ClCompile Include="..\..\src\myscript\pr_hearthstone.cpp">
       <Filter>scripts\custom</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\scriptdev2\scripts\myscript\pr_spirit_guide.cpp">
+    <ClCompile Include="..\..\src\myscript\pr_hh.cpp">
+      <Filter>scripts\custom</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\myscript\pr_spirit_guide.cpp">
       <Filter>scripts\custom</Filter>
     </ClCompile>
   </ItemGroup>
