--- a/src/game/CMakeLists.txt
+++ b/src/game/CMakeLists.txt
@@ -41,6 +41,8 @@ include_directories(
   ${CMAKE_SOURCE_DIR}/src/framework
   ${CMAKE_BINARY_DIR}
   ${CMAKE_BINARY_DIR}/src/shared
+  ${CMAKE_SOURCE_DIR}/dep/tbb/include
+  $(BOOST_ROOT)
 )
 
 set(SRC_GRP_AHBOT
