--- a/src/mangosd/CMakeLists.txt
+++ b/src/mangosd/CMakeLists.txt
@@ -50,6 +50,8 @@ include_directories(
   ${CMAKE_BINARY_DIR}/src/shared
   ${ACE_INCLUDE_DIR}
   ${OPENSSL_INCLUDE_DIR}
+  ${CMAKE_SOURCE_DIR}/dep/tbb/include
+  $(BOOST_ROOT)
 )
 
 if(POSTGRESQL)
