--- a/src/shared/CMakeLists.txt
+++ b/src/shared/CMakeLists.txt
@@ -164,6 +164,8 @@ include_directories(
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${CMAKE_SOURCE_DIR}/src/framework
   ${CMAKE_BINARY_DIR}
+  ${CMAKE_SOURCE_DIR}/dep/tbb/include
+  $(BOOST_ROOT)
 )
 
 if(POSTGRESQL)
