--- a/src/scriptdev2/CMakeLists.txt
+++ b/src/scriptdev2/CMakeLists.txt
@@ -47,6 +47,8 @@ include_directories(
   ${CMAKE_BINARY_DIR}/src/shared
   ${ACE_INCLUDE_DIR}
   ${MYSQL_INCLUDE_DIR}
+  ${CMAKE_SOURCE_DIR}/dep/tbb/include
+  $(BOOST_ROOT)
 )
 
 if(PCH)
