--- a/win/VC120/game.vcxproj.filters
+++ b/win/VC120/game.vcxproj.filters
@@ -562,10 +562,16 @@
     <ClCompile Include="..\..\src\game\GamePointMgr.cpp">
       <Filter>PR</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\game\pr_cache.cpp">
+    <ClCompile Include="..\..\src\game\pr_zip.cpp">
       <Filter>PR</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\game\md5lib.cpp">
+    <ClCompile Include="..\..\src\game\pr_base64.cpp">
+      <Filter>PR</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\game\pr_md5lib.cpp">
+      <Filter>PR</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\game\pr_aes.cpp">
       <Filter>PR</Filter>
     </ClCompile>
   </ItemGroup>
@@ -1072,13 +1078,22 @@
     <ClInclude Include="..\..\src\game\GamePointMgr.h">
       <Filter>PR</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\game\pr_cache.h">
-      <Filter>PR</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\src\game\pr_threadpool.h">
       <Filter>PR</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\game\md5lib.h">
+    <ClInclude Include="..\..\src\game\pr_cache.hpp">
+      <Filter>PR</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\game\pr_zip.h">
+      <Filter>PR</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\game\pr_base64.h">
+      <Filter>PR</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\game\pr_md5lib.h">
+      <Filter>PR</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\game\pr_aes.h">
       <Filter>PR</Filter>
     </ClInclude>
   </ItemGroup>
