实现雇佣兵雏形

--- a/win/VC120/ScriptDev2.vcxproj
+++ b/win/VC120/ScriptDev2.vcxproj
@@ -215,6 +215,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\src\myscript\mercenary_gossip.cpp" />
     <ClCompile Include="..\..\src\myscript\pr_hearthstone.cpp" />
     <ClCompile Include="..\..\src\myscript\pr_hh.cpp" />
     <ClCompile Include="..\..\src\myscript\pr_spirit_guide.cpp" />
