--- a/win/VC120/ScriptDev2.vcxproj
+++ b/win/VC120/ScriptDev2.vcxproj
@@ -684,6 +684,7 @@
     <ClCompile Include="..\..\src\scriptdev2\ScriptMgr.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\src\myscript\mercenary_gossip.h" />
     <ClInclude Include="..\..\src\myscript\pr_hearthstone.h" />
     <ClInclude Include="..\..\src\scriptdev2\base\escort_ai.h" />
     <ClInclude Include="..\..\src\scriptdev2\base\follower_ai.h" />
